NXP-29984: migrate ActionService to use xmap registries
- removed custom filter support (unused)
- Dropped unused sub map properties support on actions to ease up merge: removed ActionPropertiesDescriptor class, replaced by Map<String, Serializable>.